# xrpc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: message.md
docs/migration/: 0.3.md
docs/reference/: client-lifecycle.md  message-protocol.md  transport-shutdown.md
examples/: byte_transports.rs  message_transport_shm.rs  rpc_client_server.rs
src/: client.rs  codec.rs  discovery.rs  error.rs  lb_client.rs  lib.rs  loadbalancer.rs  pool.rs  protocol.rs  server.rs  streaming.rs  typed_channel.rs
src/channel/: message.rs  mod.rs  serde.rs  typed.rs
src/message/: metadata.rs  mod.rs  types.rs
src/transport/: arc.rs  channel.rs  direct.rs  message_transport.rs  mod.rs  shared_memory.rs  tcp.rs  unix.rs  utils.rs
