[package]
name = "xrpc-rs"
version = "0.1.8"
edition = "2024"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
description = "async RPC library optimized for shared memory communication"
license = "MIT"
repository = "https://github.com/geminik23/xrpc-rs"
keywords = ["rpc", "ipc", "async", "tokio", "shared-memory"]
readme = "README.md"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"

# Serialization
bytes = "1.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Sync
parking_lot = "0.12"
crossbeam = "0.8"

# Shared Memory
shared_memory = "0.12"
raw_sync = "0.1"

# Compression
lz4 = "1.24"
zstd = "0.13"
serde_json = "1.0.145"

[features]
default = []

[lib]
name = "xrpc"
path = "src/lib.rs"
